tdf#138884 Crash when deleting template via context menu

Change-Id: Ia332070d4d49ee697021d543c4eb6cec08994284